# note-app

./: .gitignore  .vercelignore  AGENTS.md  CONNECT-GUIDE.md  Makefile  README.md  TEST-GUIDE.md  e2e-mobile-test.cjs  package-lock.json  package.json  vercel.json
backend/: .coverage  .env.example  .env.railway.example  .railwayignore  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e5e1856db3c_drop_insight_agent_runs_and_insight_.py  20260328_000001_initial_schema.py  20260328_000002_insights_architecture.py  20260329_000003_agentic_insights_v2.py  20260329_000004_agent_run_metrics.py  20260404_000005_note_collaboration_lineage.py  20260406_000006_mind_embeddings.py  20260406_000007_mind_connections.py  20260406_000008_ground_posts.py  20260410_000009_user_avatar_url.py  20260414_000010_note_ai_status.py  20260414_000011_unified_backend_schema.py  20260417_000013_folder_fk_indexes.py  20260417_000014_ground_moderation.py  20260417_000015_api_tokens.py  20260421_000016_insight_generation_logs.py  20260715_000012_push_notifications.py  20260720_000017_clear_embeddings_for_cf_migration.py  3daf76cc60c1_merge_multiple_heads.py  86a501eb1189_add_insight_event_and_agent_state.py
backend/api/: index.py
backend/api/v1/: auth.py  files.py  folders.py  ground.py  insights.py  mind.py  notes.py  notifications.py  payments.py  search.py  storage.py  tags.py  tasks.py  tokens.py  versions.py
backend/app/: api_docs.html  config.py  database.py  landing.html  logging_config.py  main.py  middleware.py  models.py  note_collaboration.py  privacy.html  product.html  schemas.py  storage.py  terms.html
backend/app/auth/: utils.py  (+1 more)
backend/scripts/: backfill_embeddings.py  import_obsidian.py  migrate_legacy_files_to_r2.py  run_insight_from_files.py  seed_celebrities.py  seed_demo.py  stress_test_api.py  stress_test_report_1775839989.json  stress_test_report_1775840021.json  stress_test_report_1775840073.json  stress_test_report_1775840129.json  stress_test_report_1775840149.json  stress_test_report_1775841044.json  stress_test_report_1775841059.json  stress_test_report_1775841077.json  test_ai_sdk.py  test_perspectives.py
backend/tests/: conftest.py  factories.py  test_e2e.py  test_inbox_e2e.py
(+135 files in other folders)
